<resources>
    <string name="app_name">VirtualWalletDev</string>

    <string name="user_welcome">Bienvenid@!</string>
    <string name="username">Username</string>
    <string name="balance_tv">Saldo disponible</string>
    <string name="balance">485.54$</string>
    <string name="send_money">Transferir</string>
    <string name="deposit">Depositar</string>
    <string name="add_card">Agregar tarjeta</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_notifications">Notificaciones</string>
    <string name="menu_activity">Actividad</string>
    <string name="menu_more">Mas</string>

    <string name="card_number">Numero de tarjeta</string>
    <string name="card_name">Nombre del propietario de la tarjeta</string>
    <string name="card_expiration">Fecha de vencimiento</string>
    <string name="card_code">Codigo del dorso de la tarjeta</string>
    
    <string name="operation">Operacion</string>
    <string name="uid">id de operacion</string>
    <string name="date">fecha de operacion</string>
</resources>