<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/menu_home"
        android:icon="@drawable/ic_baseline_home_24" />
    <item
        android:id="@+id/movementFragment"
        android:title="@string/menu_activity"
        android:icon="@drawable/ic_baseline_article_24" />
    <item
        android:id="@+id/notificationFragment"
        android:title="@string/menu_notifications"
        android:icon="@drawable/ic_baseline_notifications_24" />
    <item
        android:id="@+id/moreOptionFragment"
        android:title="@string/menu_more"
        android:icon="@drawable/ic_baseline_more_horiz_24" />
</menu>