<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:layout_margin="16dp">
        <LinearLayout
            android:id="@+id/cardLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/number_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_number"
                android:textColor="@color/black"
                android:layout_margin="8dp"
                />
            <TextView
                android:id="@+id/name_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_name"
                android:textColor="@color/black"
                android:layout_margin="8dp"
                />
            <TextView
                android:id="@+id/expiration_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_expiration"
                android:textColor="@color/black"
                android:layout_margin="8dp"/>

            <TextView
                android:id="@+id/code_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textColor="@color/black"
                android:text="@string/card_code" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

