<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/cardLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/operation_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/black"
            android:layout_margin="8dp"
            />
        <TextView
            android:id="@+id/operation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operation"
            android:textColor="@color/black"
            android:layout_margin="8dp"
            />

        <TextView
            android:id="@+id/movement_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uid"
            android:textColor="@color/black"
            android:layout_margin="8dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>